# WLM-Persona-Engine

./: README.md  pyproject.toml
docs/: api.md  identity-rules.md  overview.md  roadmap.md
examples/: persona_from_role.md  persona_from_traits.md  persona_worldview.md
src/: __init__.py  api.py  cli.py  role_engine.py  trait_engine.py  wlm_persona_engine12312
src/wlm_persona_egine/: closure_engine.py  invariants_engine.py  persona_generator.py  tension_engine.py
tests/: test_cli.py  test_closure_engine.py  test_end_to_end.py  test_invariants_engine.py  test_persona_generator.py  test_role_engine.py  test_tension_engine.py  test_trait_engine.py
